@@ -7,14 +7,16 @@
 .button-group {
   > span {
     cursor: pointer;
-    &.button-icon {
-      font-family: 'FontAwesome';
-      > span {
-        @include blind;
-      }
-    }
   }
 
+
+  span.button-icon {
+    font-family: 'FontAwesome';
+    > span {
+      @include blind;
+    }
+  }
+  
   &.button-panel, &.operators {
     > span {
       box-shadow: $choose-box-shadow;
@@ -44,6 +46,24 @@
       }
     }
   }
+
+  &.button-panel {
+    > span > span.check {
+      font-family: 'FontAwesome';
+      width: 1.2em;
+      display: inline-block;
+      &:not(.checked)::after {
+        content: $fa-check;
+      }
+      &.checked::after {
+        content: $fa-checked;
+      }
+      > span {
+        @include blind;
+      }
+    }
+  }
+
   &.button-view {
     display: block;
     position: absolute;
@@ -100,5 +120,4 @@ ul.menu.button-group-list {
 	  border-top-right-radius: 5px;
   }
 }
-
 
