@@ -17,6 +17,7 @@
         - Added settings skeleton.
         - Added query panel for query views.
         - Added state object.
+        - Added toggle button to buttongroup.
 
 0.36 2019-09-19
         - Rename all cookies to be independent
